Change from Kafka to RabbitMQ. Containerize the project

--- a/ChatServer/Views/Home/Chat.cshtml
+++ b/ChatServer/Views/Home/Chat.cshtml
@@ -12,9 +12,8 @@
 <div class="text-center">
     <h1 class="display-4">Chat</h1>
     <ul class="text-left" id="msgList">
-        <li>Fernando: Olá, Mundo!</li>
-        <li>Fernando: /stock=appl.us</li>
-        <li>Bot: APPL.US quote is $93.42 per share</li>
+        <li>ExampleMessage: /stock=appl.us</li>
+        <li>ExampleBot: APPL.US quote is $93.42 per share</li>
     </ul>
     <div class="input-group mb-3">
         <input type="hidden" id="author" value="@User.Identity.Name" />
